# lita_cargo

./: .env  config.py  database.py  docker-compose.yml  dockerfile  functions.py  main.py  one.sh  pyproject.toml  requirements.txt  tokenjwt.py
api/docker/: one.sh
certs/: private.pem  public.pem
migrations/: env.py
migrations/versions/: 851233376635_commit.py  886671d2dba7_commit.py  a3ddf94f6244_commit.py  e8addd9dff64_commit.py  fc89c6742f1f_commit.py
router/: api_conf.py  model.py  shemas.py
router/admin/: function.py  router.py  shemas.py
router/root/: router.py  shemas.py
router/user/: router.py
static/css/: style.css
static/js/: script.js
templates/: 404.html  base.html  bishkek.html  china.html  index.html  login.html  register.html  report.html  search_form.html  take.html
